<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/menu_camera"
        app:showAsAction="always">

    </item>

    <item
        android:id="@+id/menu_color"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/menu_color"
        app:showAsAction="always">

    </item>

    <item
        android:id="@+id/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_save"
        app:showAsAction="always">

    </item>

    <item
        android:id="@+id/menu_new_note"
        android:title="New Note"
        >

    </item>
</menu>