<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="10"
    tools:context=".activity.EditNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:weightSum="9"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_image_edit"
            android:layout_width="120dp"
            android:layout_height="120dp" />

        <TextView
            android:id="@+id/tv_date_now_edit"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="5dp"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_time_now_edit"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="10sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_title_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:hint="@string/et_title"
        />

    <EditText
        android:id="@+id/et_content_edit"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textSize="20sp"
        android:hint="@string/et_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@android:drawable/ic_lock_idle_alarm" />

        <Button
            android:id="@+id/bt_alarm_edit"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/bt_alarm" />

        <LinearLayout
            android:id="@+id/ll_spinner_date_time_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible">

            <Spinner
                android:id="@+id/sp_date_edit"
                android:layout_width="110dp"
                android:layout_height="50dp">

            </Spinner>

            <Spinner
                android:id="@+id/sp_time_edit"
                android:layout_width="110dp"
                android:layout_height="50dp">

            </Spinner>

            <Button
                android:id="@+id/bt_exit_spinner_edit"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@android:drawable/btn_dialog" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/btv_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:weightSum="1"
        app:itemIconTint="#999999"
        app:itemTextColor="#FFFFFF"
        app:menu="@menu/menu_bottom_edit" />

</LinearLayout>